# agentkit

./: AUTO_CACHE_BUSTING.md  BITBUCKET_SETUP.md  CACHE_CLEAR_INSTRUCTIONS.txt  CLAUDE.md  DEPLOY_REAL_CONTRACT.md  GATEWAY_FIXES_SUMMARY.md  GATEWAY_ZKML_TEST_RESULTS.md  HOW-TO-GET-REAL-ZKML.md  MANUAL_UPDATE_INSTRUCTIONS.md  PROJECT_STRUCTURE.md  PUSH_TO_GITHUB_INSTRUCTIONS.md  README.md  REAL_IMPLEMENTATION_STATUS.md  TINY-MLP-ZKML-SOLUTION.md  bitbucket_eip712_update_summary.md  bitbucket_update_summary.md  check-balance.js  check-gateway-balance.js  check-gateway-only.js  create_tiny_mlp.py  deployed-contract-info.json  deployment-info.json  deposit-all-usdc.js  fix-all-concat.py  fix-concat.py  fund-contract.js  hardhat.config.js  package-contracts.json  package-lock.json  package.json  serve-no-cache.py  simple-deposit.js  test-14param.sh  test-browser-workflow-simulation.js  test-browser-workflow.html  test-complete-gateway-workflow.html  test-complete-groth16-ui.js  test-current-transfer.js  test-enhanced-parameters.html  test-full-workflow-14param.sh  (+28 more)
api/: groth16-jolt-backend-real.js  groth16-jolt-backend-v2.js  groth16-jolt-backend.js  groth16-verifier-backend.js  jolt-onchain-backend.js  jolt-to-circuit-bridge.js  nova-verifier-backend.js  simple-ws-server.js  unified-backend.js  zkml-backend.js  zkml-llm-decision-backend-real.js  zkml-llm-decision-backend.js  (+2 more)
docs/: INDEX.md  (+43 more)
nova-jolt/arecibo-integration/rust-ffi/: Cargo.toml
nova-jolt/arecibo-integration/rust-ffi/src/: lib.rs
solana/groth16-verifier/: Cargo.toml
solana/groth16-verifier/src/: lib.rs
(+625 files in other folders)
