[package]
name = "groth16-verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = "1.17.0"
borsh = "0.10.3"
borsh-derive = "0.10.3"
ark-groth16 = "0.4.0"
ark-bn254 = "0.4.0"
ark-ff = "0.4.0"
ark-serialize = "0.4.0"
bytemuck = { version = "1.14", features = ["derive"] }

[lib]
crate-type = ["cdylib", "lib"]
name = "groth16_verifier"

[features]
no-entrypoint = []

[dev-dependencies]
solana-program-test = "1.17.0"
solana-sdk = "1.17.0"